           detect more XPath errors, and produce warnings for XPath expressions
           that for example refer to unknown nodes
         for python coders: non backwards compatible change in the
           pyang.xpath module.  the function xpath.tokens() has been
           replaced by pyang.xpath_lexer.scan(), but it also return
           tokens in a new format.
         pyang -f yang now keeps comments by default.  use
           the parameter --yang-remove-comments to remove them.
         updated the IETF plugin to RFC 8407
         updated the IETF plugin to check for the license text and
           RFC 2119/8174 boilerplate text

         pr:471 - fixes #468, #469, check_update now handles submodule better,
                  and checks ranges
                  thanks to Paul Merlo
         pr:464 - added __str__() and __repr__() methods to Statement
                  thanks to William Lupton
         pr:463 - more memory usage reductions
                  thanks to Glenn Matthews
         pr:461 - fixes #458, unique stmt inside global grouping causes
                  dsdl parsing error
                  thanks to Norbert Varkonyi

   1.7.8 - 2019-01-21
         for python coders: reverted method signature change for
         Repository.get_module_from_handle().  it now has the same
         signature as in 1.7.5.

         fixed bug in check_update when there were more than one
         augment for the same target node.

   1.7.7 - 2019-01-17
         fixed a bug in -f yang formatting

   1.7.6 - 2019-01-17
         fixed grammar; do not allow "must" in "choice"
         added --yang-line-length to try to format lines with max length
         various fixes to -f yang for consistency in the output
         -f yang now keeps concatenated strings from the input and use them
           in the output (properly indented)

         pr:403 - fix json config validation error message
                  thanks to Ganesh Nalawade