@@ -6,6 +6,9 @@
            pyang.xpath module.  the function xpath.tokens() has been
            replaced by pyang.xpath_lexer.scan(), but it also return
            tokens in a new format.
+         for python coders: non backwards compatible change in
+           statements.add_xpath_function().  thsis function now takes
+           three parameters, instead of just one.
          pyang -f yang now keeps comments by default.  use
            the parameter --yang-remove-comments to remove them.
          updated the IETF plugin to RFC 8407
